Resolve all layout issues of Sidebar

--- a/src/components/BottomMenu/BottomMenu.module.css
+++ b/src/components/BottomMenu/BottomMenu.module.css
@@ -1,5 +1,5 @@
 .container {
-  margin-top: 0.3rem;
+  margin-top: 0.8rem;
 }
 .menu_item {
   display: flex;
