--- a/src/components/CatagoriesList/Catagories.module.css
+++ b/src/components/CatagoriesList/Catagories.module.css
@@ -1,10 +1,12 @@
 .container {
+  margin-top: 1rem;
 }
 .heading {
   padding-left: 1rem;
   font-size: 1.2rem;
   font-weight: 500;
   color: #ffffff;
+  margin-bottom: 0.8rem;
 }
 .catagory_item {
   display: flex;
