--- a/src/components/SideBar/SideBar.module.css
+++ b/src/components/SideBar/SideBar.module.css
@@ -1,34 +1,60 @@
+.container {
+  display: flex;
+  height: 100vh; /* Full viewport height */
+  overflow: hidden;
+}
 .sideBar {
+  /* position: fixed;
+  top: 0;
+  left: 0; */
   width: var(--SideBar-width);
-  height: 100vh;
   background-color: var(--sidebar-bg-color);
-  overflow-y: auto;
-  border-right-width: calc(0.0625rem);
-  border-right-style: solid;
-  border-right-color: var(--side-bar-border-color);
   display: flex;
   flex-direction: column;
   padding: 2.5rem 0;
+  overflow-x: hidden; /* Hide horizontal scrollbar */
+  overflow-y: auto;
 }
 .app_branding {
   display: flex;
   align-items: center;
   justify-content: center;
-  position: relative;
-  right: 15px;
+  /* right: 15px; */
   gap: 0.4rem;
   margin-bottom: 1.2rem;
 }
 .app_logo {
-  height: 40px;
+  height: 42px;
   width: 48px;
   object-fit: cover;
   border-radius: 5px;
+  cursor: pointer;
 }
 .app_name {
   font-size: var(--app-name-font);
-  font-family: "Poetsen One", sans-serif;
-  font-weight: 400;
-  font-style: normal;
+  position: relative;
+  top: 1.5px;
+  font-weight: 700;
+  letter-spacing: 7px;
   color: #ffffff;
+}
+/* ::-webkit-scrollbar {
+  width: 10px;
+} */
+
+::-webkit-scrollbar {
+  width: 4px; /* Adjust as needed */
+}
+
+/* Change the color of the scrollbar thumb */
+::-webkit-scrollbar-thumb {
+  background-color: #888;
+  border-radius: 7px; /* Change to your desired thumb color */
+}
+
+/* Change the color of the scrollbar track */
+::-webkit-scrollbar-track {
+  background-color: var(
+    --sidebar-border-color
+  ); /* Change to your desired track color */
 }
