--- a/src/components/UserProfile/UserProfile.module.css
+++ b/src/components/UserProfile/UserProfile.module.css
@@ -1,12 +1,11 @@
 .container {
   display: flex;
-  align-items: center;
+  flex-direction: column;
   padding-left: 1rem;
   margin-top: 1rem;
-  gap: 0.3rem;
-  cursor: pointer;
   padding-top: 0.3rem;
   padding-bottom: 0.3rem;
+  cursor: pointer;
 }
 .user_img {
   height: 48px;
@@ -15,6 +14,11 @@
   position: center;
 
   object-fit: cover;
+}
+.user {
+  display: flex;
+  align-items: center;
+  gap: 0.5rem;
 }
 .user_name {
   font-size: var(--normal-font);
