--- a/src/global.css
+++ b/src/global.css
@@ -48,3 +48,8 @@ body {
   background: var(--body-bg-color);
   font-size: var(--small-font);
 }
+* {
+  box-sizing: border-box;
+  padding: 0;
+  margin: 0;
+}
