--- a/src/screens/HomeScreen/Home.module.css
+++ b/src/screens/HomeScreen/Home.module.css
@@ -1,3 +1,7 @@
 .container {
   display: flex;
 }
+.main_content {
+  flex: 1;
+  overflow-y: auto; /* Enable vertical scrolling for main content */
+}
